Show the user an error if we can't initialize OpenGL